// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/IDENTIFIER.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/TIME.proto";


package ccsds_mc.protobuf;

message StatisticFunctionDetailsStruct {
extensions 4 to 104;

  optional ccsds_mal.protobuf.IDENTIFIER name = 1;
  optional ccsds_mal.protobuf.STRING description = 2;
  optional ccsds_mal.protobuf.TIME timestamp = 3;
}
