// Produced by Acceleo JavaScript Generator 1.1.0
import "../ccsds_mal/types.proto";



package ackRequest.protobuf;

message AckSMS {
extensions 3 to 103;

  optional ccsds_mal.protobuf.TIME SystemCreationDate = 1;
  optional ccsds_mal.protobuf.TIME ApplicationCreationDate = 2;
}
