// Generated file
import "ccsds_mal/types.proto";



package ccsds_mc.protobuf;

message StatisticFunctionDetails {
extensions 4 to 104;

  optional ccsds_mal.protobuf.IDENTIFIER name = 1;
  optional ccsds_mal.protobuf.STRING description = 2;
  optional ccsds_mal.protobuf.TIME timestamp = 3;
}
