// Produced by Acceleo JavaScript Generator 1.1.0
import "ccsds_mal/types.proto";



package execution.protobuf;

message ExecutionStatus {
extensions 3 to 103;

  optional ccsds_mal.protobuf.INTEGER status = 1;
  optional ccsds_mal.protobuf.TIME statusTime = 2;
}
