// Generated file
import "ccsds_mal/types.proto";



package file.protobuf;

message CollectionVirtualFolder {
extensions 3 to 103;

  optional ccsds_mal.protobuf.STRING name = 1;
  optional ccsds_mal.protobuf.LONG uid = 2;
}
