// Generated file
import "ccsds_mal/types.proto";



package operationParameter.protobuf;

message OperationParameter {
extensions 4 to 104;

  optional ccsds_mal.protobuf.STRING name = 1;
  optional ccsds_mal.protobuf.FINETIME timestamp = 2;
  optional ccsds_mal.protobuf.ATTRIBUTE value = 3;
}
