// Produced by Acceleo Cpp Generator 1.1.0-R7S1-20151214

import "ccsds_mal/types.proto";

package ccsds_mc.protobuf;

message GroupDefinition {
extensions 6 to 106;

  optional ccsds_mal.protobuf.IDENTIFIER name = 1;
  optional ccsds_mal.protobuf.STRING description = 2;
  optional ccsds_mal.protobuf.BLOB objectType = 3;
  optional ccsds_mal.protobuf.USHORT domain = 4;
  repeated ccsds_mal.protobuf.LONG instanceIds = 5;
}
